# aura-vision

./: .gitignore  README.md  pyproject.toml
scripts/: train_electrocom.py
src/: config.py  detector.py  main.py  models.py  utils.py
src/aura/: __init__.py  cli.py
src/aura/config/: __init__.py  loader.py  profiles.yaml  settings.py
src/aura/core/: __init__.py  schemas.py  types.py
src/aura/depth/: __init__.py  base.py  calibration.py  known_size.py  object_sizes.yaml
src/aura/detection/: __init__.py  base.py  yolo.py
src/aura/measurement/: __init__.py  size.py
src/aura/perception/: __init__.py  scene.py
src/aura/vision/: __init__.py  camera.py  renderer.py
