[project]
name = "aura-vision"
version = "0.2.0"
description = "Lightweight computer vision module for real-time object detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.3.223",
    "pyyaml>=6.0",
]

[project.scripts]
aura = "aura.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aura"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["D100", "D104", "ANN101", "ANN102"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
